--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -1,14 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ConfigFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/configChangePassword"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center|start"
+            android:text="Cambiar contraseña"
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/ic_arrow_right"
+            app:iconGravity="end"
+            app:iconSize="30dp"
+            app:iconTint="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/RedPrincipal"
+            app:strokeWidth="3dp" />
+
+        <Button
+            android:id="@+id/configNotifications"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="100dp"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center|start"
+            android:text="Notificaciones"
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/ic_arrow_right"
+            app:iconGravity="end"
+            app:iconSize="30dp"
+            app:iconTint="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/RedPrincipal"
+            app:strokeWidth="3dp" />
+
+        <Button
+            android:id="@+id/configHelp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center|start"
+            android:text="Ayuda"
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/ic_arrow_right"
+            app:iconGravity="end"
+            app:iconSize="30dp"
+            app:iconTint="#000000"
+            app:layout_constraintTop_toBottomOf="@+id/configNotifications"
+            app:strokeColor="@color/RedPrincipal"
+            app:strokeWidth="3dp"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <Button
+            android:id="@+id/logOut"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center|start"
+            android:text="Cerrar sersión"
+            android:textAllCaps="false"
+            android:textColor="#000000"
+            app:cornerRadius="0dp"
+            app:icon="@drawable/ic_logout"
+            app:iconGravity="end"
+            app:iconSize="30dp"
+            app:iconTint="#000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:strokeColor="@color/RedPrincipal"
+            app:strokeWidth="3dp" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
