--- a/app/src/main/res/layout/item_favorites.xml
+++ b/app/src/main/res/layout/item_favorites.xml
@@ -2,8 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="106dp"
     android:orientation="horizontal"
+    android:background="@drawable/customborder"
+    android:paddingStart="3dp"
+    android:paddingBottom="3dp"
+    android:paddingTop="3dp"
     >
     <ImageView
         android:layout_width="100dp"
@@ -14,19 +18,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="5dp"
+        >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvFavoriteName"
-            tools:text="Favorite Name"/>
+            tools:text="Favorite Name"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvFavoriteAddress"
-            tools:text="Favorite Name"/>
+            tools:text="Favorite Name"
+            android:textColor="@color/black"
+            />
 
     </LinearLayout>
 
