--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="106dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:background="@drawable/customborder"
+    android:paddingStart="3dp"
+    android:paddingTop="3dp"
+    android:paddingBottom="3dp"
     >
 
     <ImageView
@@ -14,28 +18,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="5dp"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvNotificationTitle"
             tools:text="arroba"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="16dp"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvNotificationDesc"
+            android:textColor="@color/black"
             tools:text="arroba"
             />
 
         <TextView
+            android:id="@+id/tvNotificationTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvNotificationTime"
-            tools:text="arroba"
-            />
+            android:textColor="@color/black"
+            tools:text="arroba" />
 
     </LinearLayout>
 
