--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -72,7 +72,7 @@
             tools:layout_editor_absoluteX="0dp" />
 
         <Button
-            android:id="@+id/logOut"
+            android:id="@+id/btnLogOut"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:backgroundTint="#FFFFFF"
